<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Er3\'y</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="HelloAbanoub">\@string/Hello Abanoub</string>
    <string name="abanoub">Hello Abanoub</string>
    <string name="login">Sign In</string>
    <string name="userid">User ID</string>
    <string name="pass">Password</string>
    <string name="newacc">Don\'t Have an Account ?! Create one NOW !</string>
    <string name="dnt">Don\'t Have an Account ?!</string>
    <string name="cr">"Create one NOW ! "</string>
    <string name="signup">Sign up</string>
    <string name="signin">Sign in</string>
    <string name="mail">E-Mail</string>
    <string name="send">Send</string>
    <string name="name">Name</string>
    <string name="hve">Already Have an Account ?!</string>
    <string name="srvstts">server_status</string>
    <string name="srvr">server</string>
    <string name="ab">Abanoub</string>
    <string name="cntct">Contact</string>
    <string name="space"></string>
    <string name="sot">Sign-out</string>
    <string name="sup">Sign Up</string>
    <string name="cs">Contacts</string>
    <string name="ls">List</string>
    <string name="adcntc">Add Contact</string>
    <string name="ref">Refresh</string>

</resources>
