<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/textViewSignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:clickable="false"
        android:fontFamily="Segoe UI Light (Headings)"
        android:longClickable="false"
        android:text="@string/login"
        android:textSize="40sp"
        android:textStyle="normal"
        android:typeface="normal" />

    <TextView
        android:id="@+id/TextView01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/Login2"
        android:layout_below="@+id/textViewSignIn"
        android:clickable="false"
        android:fontFamily="Segoe UI Light (Headings)"
        android:longClickable="false"
        android:text="@string/userid"
        android:textSize="25sp"
        android:textStyle="normal"
        android:typeface="normal" />

    <Button
        android:id="@+id/Login2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/userIDRegister"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="72dp"
        android:onClick="authenticate"
        android:text="@string/signin" />

    <TextView
        android:id="@+id/userIDRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/TextView01"
        android:layout_below="@+id/TextView01"
        android:layout_marginTop="61dp"
        android:clickable="false"
        android:fontFamily="Segoe UI Light (Headings)"
        android:longClickable="false"
        android:text="@string/pass"
        android:textSize="25sp"
        android:textStyle="normal"
        android:typeface="normal" />

    <EditText
        android:id="@+id/userid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/TextView01"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:inputType="textPersonName" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/passlog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/userid"
        android:layout_below="@+id/userIDRegister"
        android:ems="10"
        android:inputType="textPassword" />

</RelativeLayout>